--- a/src/components/common/navbar/Navbar.css
+++ b/src/components/common/navbar/Navbar.css
@@ -6,20 +6,32 @@
     align-items: center;
 }
 .navbar a {
-    padding: 0 16px;
+    padding: 5px;
+    width: 90px;
+    text-align: center;
 }
 .navbar a:visited {
     color: black;
 }
-#bluenav {
+#bluea {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 120px;
     height: 36px;
     background: rgba(130, 156, 208, 0.5);
     border-radius: 3px;
-}
-#bluea {
     color: white;
+    font-size: 20px;
+    padding: 0 10px;
+    margin: 0 20px;
+}
+div.signout-flag-div {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: grey;
+    margin-left: -25px;
+}
+p.signout-flag {
+    font-size: 12px;
 }
